--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/* General */*
+
+*, ::before, ::after
+{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html{
     background-image: linear-gradient(
   90deg,
@@ -16,3 +25,43 @@ html{
   hsl(324deg 52% 35%) 100%
 );
 }
+
+/* header */
+
+header{
+  height: 10vh;
+}
+ul{
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+li{
+  text-transform: uppercase;
+  flex-direction: column;
+  list-style-type:none;
+}
+
+img{
+  width: 20%;
+  height: 10vh;
+}
+
+/* main */
+body{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+}
+
+a{
+  font-size: 1.2em;
+  text-decoration: none;
+
+}
+
+/* footer */
+
