--- a/style.css
+++ b/style.css
@@ -69,5 +69,63 @@ a{
 
 }
 
+main{
+  display: flex;
+  flex-direction: column;
+}
+
+section{
+  display: flex;
+  flex-direction: row;
+  color: #fff;
+
+}
+
+.h1{
+  font-family: 'Cabin', sans-serif, 6rem; 
+  font-weight: 700;
+}
+
+.h2{
+  font-family: 'Cabin', sans-serif, 6rem; 
+  font-weight: 700;
+  font-size: 3.5rem;
+}
+
+.h3{
+  font-family: 'Cabin', sans-serif, 6rem; 
+  font-weight: 700;
+  font-size: 2.5rem;
+}
+
+.h4{
+  font-family: 'Cabin', sans-serif, 6rem; 
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+
+.div p{
+  font-family: 'Montserrat', sans-serif;
+}
+
+p a{
+  font-family: 'Montserrat', sans-serif;
+  text-underline-offset: 0.25rem;
+}
+
+.h{
+  font-family: 'Cabin', sans-serif, 6rem; 
+  font-weight: 700;
+  font-size: 1.7rem;
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+}
+
+.projet{
+  background: #b7094c;
+}
 /* footer */
 
