--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ a{
 main{
   display: flex;
   flex-direction: column;
+  height: 120vh;
 }
 
 section{
@@ -87,20 +88,26 @@ section{
 }
 
 .h2{
-  font-family: 'Cabin', sans-serif, 6rem; 
+  font-family: 'Cabin', sans-serif; 
   font-weight: 700;
   font-size: 3.5rem;
 }
 
 .h3{
-  font-family: 'Cabin', sans-serif, 6rem; 
+  font-family: 'Cabin', sans-serif; 
   font-weight: 700;
   font-size: 2.5rem;
 }
 
 .h4{
-  font-family: 'Cabin', sans-serif, 6rem; 
+  font-family: 'Cabin', sans-serif; 
   font-weight: 600;
+  font-size: 1.7rem;
+}
+
+.h5{
+  font-family: 'Cabin', sans-serif; 
+  font-weight: 700;
   font-size: 1.3rem;
 }
 
@@ -111,12 +118,6 @@ section{
 p a{
   font-family: 'Montserrat', sans-serif;
   text-underline-offset: 0.25rem;
-}
-
-.h{
-  font-family: 'Cabin', sans-serif, 6rem; 
-  font-weight: 700;
-  font-size: 1.7rem;
 }
 
 .container{
