--- a/style.css
+++ b/style.css
@@ -114,34 +114,36 @@ section{
   align-content: center;
 }
 
-.h1{
+h1{
   font-family: 'Cabin', sans-serif; 
   font-size: 6rem; 
   font-weight: 700;
+
 }
 
-.h2{
+h2{
   font-family: 'Cabin', sans-serif; 
   font-weight: 700;
   font-size: 3.5rem;
 }
 
-.h3{
+h3{
   font-family: 'Cabin', sans-serif; 
   font-weight: 700;
   font-size: 2.5rem;
   display: flex;
-  margin-left: 80%;
-  justify-items: end;
+  margin-left: 10%;
+  text-transform:uppercase;
+
 }
 
-.h4{
+h4{
   font-family: 'Cabin', sans-serif; 
   font-weight: 600;
   font-size: 1.7rem;
 }
 
-.h5{
+h5{
   font-family: 'Cabin', sans-serif; 
   font-weight: 700;
   font-size: 1.3rem;
@@ -149,7 +151,7 @@ section{
 
 }
 
-.div p{
+div p{
   font-family: 'Montserrat', sans-serif;
 }
 
